--- a/index.html
+++ b/index.html
@@ -61,14 +61,8 @@
           <p class="pt-5 mt-5"><span class="">Num of expenses: </span><span id="numOfExpenses"></span><br></p>
         </div>
         <div class="budget-list" id="">
-          <table class="table">
-          <tr>
-            <th scope="col">Expense ID</th>
-            <th scope="col">Expense name</th>
-            <th scope="col">Value</th>
-            <th scope="col">Action</th>
-          </tr>
-          <tr><td id="expValue"></td></tr>
+          <table class="table table-results" id="expValue">
+          
           </table>
         </div><!-- budget-list -->
     </div>  <!-- displayExpenses -->
