Add CSS color variables

--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
         
       <!-- table list of expenses -->
       <div id="displayExpenses">
-        <div class="" id="">
-          <p class="pt-5 mt-5"><span class="">Num of expenses: </span><span id="numOfExpenses"></span><br></p>
+        <div class="col-sm pt-5">
+
+
+          <h3 class="pt-5 mt-5"><span class="results">Num of expenses: </span><span id="numOfExpenses"></span></h3><br>
         </div>
         <div class="budget-list" id="">
           <table class="table table-results" id="expValue">
