Added income displays to the screen and cards

--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
                 <label for="">please enter income amount</label> <br />
                 <input type="number" id="incomeNumber" />
               </div>
-              <button type="submit" id="submitIncome">Add Income</button>
+              <button type="submit" id="">Add Income</button>
             </form>
-            <button onclick="callBudget()" id="bug">
+            <button onclick="callIncome2()" id="bug">
               Back to add budget ->
             </button>
           </div>
