--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
       <!-- table list of expenses -->
       <div id="displayExpenses">
         <div class="col-sm pt-5">
-
-
-          <h3 class="pt-5 mt-5"><span class="results">Num of expenses: </span><span id="numOfExpenses"></span></h3><br>
+          <h6 class="pt-5 mt-5"><span class="results">Num of expenses: </span><span id="numOfExpenses"></span></h6><br>
         </div>
         <div class="budget-list" id="">
           <table class="table table-results" id="expValue">
@@ -86,10 +84,8 @@
 
     <!-- table list of income -->
     <div id="displayIncome">
-      <div class="col-sm pt-5">
-
-
-        <h3 class="pt-5 mt-5"><span class="results">Num of income: </span><span id="numOfIncome"></span></h3><br>
+      <div class="col-sm pt-5"></div>
+        <h6 class="pt-5 mt-5"><span class="results">Num of income: </span><span id="numOfIncome"></span></h6><br>
       </div>
       <div class="budget-list" id="">
         <table class="table table-results" id="incomeValue">
